# DizzyTom

BackEnd/: pyproject.toml
BackEnd/BackEnd/: settings.py  urls.py
BackEnd/apps/user/: serializers.py  views.py
FrontEnd/: vite.config.js
FrontEnd/src/: App.vue
